# mypackage

./: README.md  pyproject.toml
.github/workflows/: tests.yml
hslaupackage/: __init__.py  calculator.py
tests/: test_basic.py
